--- a/child_project/Jenkinsfile
+++ b/child_project/Jenkinsfile
@@ -9,5 +9,13 @@ pipeline {
                  echo "This ansible is running on ${VM_Name}"
             }
         }
+        stages('PrintCauses'){
+            steps{
+                script {
+                    def causes = currentBuild.getBuildCauses()
+                    println causes
+                }
+            }
+        }
     }
 }
