--- a/child_project/Jenkinsfile
+++ b/child_project/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
                  echo "This ansible is running on ${VM_Name}"
             }
         }
-        stages('PrintCauses'){
+        stage('PrintCauses'){
             steps{
                 script {
                     def causes = currentBuild.getBuildCauses()
